--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div class="out-1"></div>
+    <div class="out-2">data in</div>
+    <div class="out-3">4</div>
+    <div><input type="text" class="i-5" value="Hello"></div>
     <script src="./javascript/script.js"></script>
 </body>
 </html>
