--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <div class="out-2">data in</div>
     <div class="out-3">4</div>
     <div><input type="text" class="i-5" value="Hello"></div>
+    <div><input type="text" class="i-6" value="8888"></div>
     <script src="./javascript/script.js"></script>
+
+    <div>
+        <label for="">
+            <input type="checkbox" value="Babylon 5" checked> 
+        </label>
+    </div>
 </body>
 </html>
